--- a/IBController.ini
+++ b/IBController.ini
@@ -146,7 +146,7 @@ MinimizeMainWindow=no
 # and disconnecting the other: therefore care needs to be exercised
 # in the use of this setting. The default is 'manual'.
 
-ExistingSessionDetectedAction=manual
+ExistingSessionDetectedAction=primary
 
 
 # If set to 'accept', IBController automatically accepts incoming
@@ -186,7 +186,7 @@ ShowAllTrades=no
 # 7496 would be the usual default (or whatever you manually change
 # the port number to).
 
-ForceTwsApiPort=
+ForceTwsApiPort=4001
 
 
 # If ReadOnlyLogin is set to 'yes', and the user is enrolled in IB's
@@ -217,7 +217,7 @@ ReadOnlyLogin=no
 # continuously. If you set this setting to 'no', you may
 # experience incorrect TWS operation.
 
-IbAutoClosedown=yes
+IbAutoClosedown=no
 
 
 
@@ -241,7 +241,7 @@ IbAutoClosedown=yes
 # use the following:
 # #ClosedownAt=\u661F\u671F\u516D 12:00
 
-ClosedownAt=
+ClosedownAt=Friday 23:00
 
 
 
