--- a/IBController.ini
+++ b/IBController.ini
@@ -385,5 +385,5 @@ SuppressInfoMessages=yes
 
 # TEST
 # TradingMode=paper
-AcceptNonBrokerageAccountWarning=true
+# AcceptNonBrokerageAccountWarning=true
 
